iac/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-httpbin
labels:
  istio-injection: enabled
