iac/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-client
  namespace: istio-httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-client
  template:
    metadata:
      labels:
        app: app-client
    spec:
      containers:
      - name: client
        image: curlimages/curl
        command: ["sh", "-c"]
        args:
        - |
          while true; do
            curl -H "Authorization: Bearer $TOKEN" http://app-server.auth-namespace.svc.cluster.local;
            sleep 10;
          done
