iac/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: istio-httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - protocol: TCP
    name: http
    port: 8000
    targetPort: 8080
  selector:
    app: httpbin
  type: ClusterIP
